# ChangeLog for app-admin/eselect-python
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-python/ChangeLog,v 1.41 2009/09/02 17:28:57 arfrever Exp $

  02 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  eselect-python-20090824.ebuild,
  +files/eselect-python-20090824-old-glibc.patch:
  Fix building with old versions of sys-libs/glibc.

*eselect-python-20090824 (24 Aug 2009)

  24 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +eselect-python-20090824.ebuild:
  Version bump.

*eselect-python-99999999 (24 Aug 2009)

  24 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +eselect-python-99999999.ebuild:
  Add live ebuild.

  17 Aug 2009; Alexis Ballier <aballier@gentoo.org>
  eselect-python-20090814.ebuild:
  restore fbsd keywords now that its fine

*eselect-python-20090814 (14 Aug 2009)

  14 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -eselect-python-20080521.ebuild, -eselect-python-20080925.ebuild,
  -eselect-python-20090801.ebuild, -eselect-python-20090804.ebuild,
  +eselect-python-20090814.ebuild:
  Version bump.

  13 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  eselect-python-20090804.ebuild:
  Run `eselect python update` when no version of app-admin/eselect-python
  was earlier installed (bug #281247).

  05 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  eselect-python-20090804.ebuild:
  Append -fno-PIC -fno-PIE to avoid problems with hardened compiler.

*eselect-python-20090804 (04 Aug 2009)

  04 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +eselect-python-20090804.ebuild:
  Version bump (bug #279915).

  03 Aug 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  eselect-python-20090801.ebuild:
  FreeBSD doesn't like having as interpreter of a script another script,
  unkeywording until fixed.
