@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-python/Attic/eselect-python-20090824.ebuild,v 1.2 2009/09/02 17:28:57 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-python/Attic/eselect-python-20090824.ebuild,v 1.3 2009/09/14 18:42:08 arfrever Exp $
 
 EAPI="2"
 
@@ -15,8 +15,9 @@ SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd"
 IUSE=""
 
-DEPEND=">=app-admin/eselect-1.0.2"
-RDEPEND="${DEPEND}"
+RDEPEND=">=app-admin/eselect-1.0.2"
+DEPEND="${RDEPEND}
+	sys-devel/autoconf"
 
 pkg_setup() {
 	append-flags -fno-PIC -fno-PIE
